--- a/module_ansible/ansible-omnibus-objectserver-agg-base-install.yml
+++ b/module_ansible/ansible-omnibus-objectserver-agg-base-install.yml
@@ -1,30 +1,14 @@
 ---
-- hosts: "{{target}}"
+- hosts: 10.160.100.119 
   strategy: debug
   gather_facts: no
-  become: yes
+  #become: yes
   vars_files:
-    - "{{myenv}}-ansible-omnibus-objectserver-ha-agg-primary-deploy.yml"
-    - "env.yml"
+    #- "ansible-omnibus-objectserver-agg-base-install.yml"
+   # - "env.yml"
   roles:
 #    - role: base
 #      tags: base
 
-    - role: ansible-omnibus-objectserver-ha-agg-primary-deploy 
-      tags: ansible-omnibus-objectserver-ha-agg-primary-deploy 
-
-    - role: logrotate 
-      tags: logrotate 
-
-#    - role: filebeat 
-#      tags: filebeat 
-
-    - role: collectd 
-      tags: collectd 
-
-    - role: vcmdb-deploy
-      tags: vcmdb-deploy
-
-    - role: vcmdb-deploy_complete
-      tags: vcmdb-deploy_complete
-
+    - role: ansible-omnibus-objectserver-agg-base-install 
+      tags: ansible-omnibus-objectserver-agg-base-install 
